--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -51,7 +51,7 @@
   <div class="row py-5">
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
+        <img mat-card-image src="assets/images/family1.webp" alt="Placeholder Image" class="img-fluid" />
         <mat-card-content class="my-4">
           <h5>
             Build and secure your wealth.
@@ -63,7 +63,7 @@
 
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
+        <img mat-card-image src="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid" />
         <mat-card-content class="my-4">
           <h5>
             Start a business
@@ -75,7 +75,7 @@
 
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid" />
+        <img mat-card-image src="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid" />
         <mat-card-content class="my-4">
           <h5>
             Donate and contribute
@@ -104,7 +104,7 @@
   <section class="container align-content-center">
     <div class="row">
       <div class="col-4 d-none d-md-block">
-        <img src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid w-100" />
+        <img src="assets/images/family2.webp" alt="Placeholder Image" class="img-fluid w-100" />
       </div>
       <div class="col-12 col-md-8">
         <div class="py-4">
@@ -133,7 +133,7 @@
         </p>
       </div>
       <div class="col-4 d-none d-md-block">
-        <img src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid w-100" />
+        <img src="assets/images/office2.webp" alt="Placeholder Image" class="img-fluid w-100" />
       </div>
     </div>
   </section>
@@ -172,7 +172,7 @@
     </div>
 
     <div class="d-none d-xl-block col-xl-4">
-      <img src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid w-100 h-100 rounded-circle" />
+      <img src="assets/images/family3.webp" alt="Placeholder Image" class="img-fluid w-100" />
     </div>
   </div>
 </section>
