--- a/src/app/modules/landing/pages/services/services.component.html
+++ b/src/app/modules/landing/pages/services/services.component.html
@@ -12,7 +12,7 @@
 <section class="container align-content-center py-5 my-4">
   <div class="row">
     <div class="col-4 d-none d-md-block">
-      <img src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid w-100" />
+      <img src="assets/images/family4.webp" alt="Placeholder Image" class="img-fluid w-100 h-100" />
     </div>
     <div class="col-12 col-md-8">
       <div class="py-4">
@@ -51,7 +51,7 @@
         </p>
       </div>
       <div class="col-4 d-none d-md-block">
-        <img src="https://placehold.co/150" alt="Placeholder Image" class="img-fluid w-100" />
+        <img src="assets/images/family5.webp" alt="Placeholder Image" class="img-fluid w-100" />
       </div>
     </div>
   </section>
@@ -64,9 +64,9 @@
   </div>
   <div class="row">
     @for (item of InsuranceItems; track item.title) {
-    <div class="col-6 col-md-3 py-3">
+    <div class="col-6 col-md-4 py-3">
       <mat-card class="h-100">
-        <img mat-card-image [src]="item.image" alt="Placeholder Image" class="img-fluid" />
+        <img mat-card-image [src]="item.image" alt="Placeholder Image" class="img-fluid overflow-hidden" style="height: 416px; width: 416px;" />
         <mat-card-content class="my-4">
           <h5>
             {{item.title}}
