--- a/src/app/modules/landing/pages/contact/contact.component.html
+++ b/src/app/modules/landing/pages/contact/contact.component.html
@@ -1,7 +1,7 @@
 <!-- Hero Section -->
-<section class="hero d-flex align-items-center justify-content-start">
-    <div class="hero-overlay"></div>
-    <div class="hero-content mx-5">
+<section class="sub-hero d-flex align-items-center justify-content-start">
+    <div class="sub-hero-overlay"></div>
+    <div class="sub-hero-content mx-5">
         <div class="row">
             <h1 class="col-12 col-md-10 text-white ">Get in touch!</h1>
         </div>
