--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -94,7 +94,7 @@
       <h6 class="text-secondary-600">Help millions</h6>
       <h2 class="text-white">This is the greatest opportunity to help millions protect, build, and secure their wealth.
       </h2>
-      <button mat-raised-button type="button" color="accent" class="mt-4">Make a donation</button>
+      <button mat-raised-button type="button" color="accent" class="mt-4">Start Now</button>
     </div>
   </section>
 </div>
@@ -223,10 +223,6 @@
 </div>
 
 <app-footer></app-footer>
-
-Help millions section for button:
-Star Now 
-Get More Info
 
 Services
 Tailored made plan for you.
