--- a/src/app/_shared/styles/material-override/mat-card.css
+++ b/src/app/_shared/styles/material-override/mat-card.css
@@ -18,9 +18,34 @@
     padding: 2rem 1.5rem 2rem 1.5rem !important;
 }
 
+.mat-mdc-card-outlined.form-card {
+    border: 1px solid var(--accent-800);
+}
+
+.mat-mdc-card-outlined.form-card mat-icon,
+.mat-mdc-card-outlined.form-card h6 {
+    color: var(--accent-800);
+}
+
 .mat-mdc-card-outlined.form-card:hover {
-    background-color: var(--accent-100);
+    background-color: var(--primary-50);
+    border: 1px solid var(--primary-600);
     cursor: pointer;
+}
+
+.mat-mdc-card-outlined.form-card.active {
+    background-color: var(--primary-50);
+    border: 1px solid var(--primary-900);
+}
+
+.mat-mdc-card-outlined.form-card:hover mat-icon,
+.mat-mdc-card-outlined.form-card:hover h6{
+    color: var(--primary-600);
+}
+
+.mat-mdc-card-outlined.form-card.active mat-icon,
+.mat-mdc-card-outlined.form-card.active h6{
+    color: var(--primary-900);
 }
 
 .mat-mdc-card-outlined.form-card:hover mat-icon {
