--- a/src/app/modules/landing/components/footer/footer.component.html
+++ b/src/app/modules/landing/components/footer/footer.component.html
@@ -1,26 +1,26 @@
-<footer class="container-fluid bg-primary-900">
+<footer class="container-fluid">
   <div class="row justify-content-center p-5">
     <div class="col-8 col-md-4 order-4 order-md-1 d-flex flex-column">
       <img src="../../../../../assets/images/logo-white-complete.png" class="img-fluid">
 
       <div class="d-flex flex-column gap-3 px-4 mx-4">
         <div class="d-flex align-content-center gap-2">
-          <mat-icon class="text-white">location_on</mat-icon>
-          <span class="text-white text-body">3333 Michelson Dr suite 300 Irvine CA 92618</span>
+          <mat-icon >location_on</mat-icon>
+          <span class="text-body">3333 Michelson Dr suite 300 Irvine CA 92618</span>
         </div>
         <div class="d-flex align-content-center gap-2">
-          <mat-icon class="text-white">phone</mat-icon>
-          <span class="text-white text-body">+52 626 922 1620</span>
+          <mat-icon >phone</mat-icon>
+          <span class="text-body">+52 626 922 1620</span>
         </div>
         <div class="d-flex align-content-center gap-2">
-          <mat-icon class="text-white">mail</mat-icon>
-          <span class="text-white text-body">Joe&#64;catalystleadershipgrp.com</span>
+          <mat-icon >mail</mat-icon>
+          <span class="text-body">Joe&#64;catalystleadershipgrp.com</span>
         </div>
       </div>
     </div>
 
     <div class="col-6 col-md-2 order-1">
-      <div class="text-white text-caption px-3">Quick Links</div>
+      <div class="text-caption px-3">Quick Links</div>
       <mat-nav-list role="NavigationList">
         @for (item of NavigationItems; track item.displayName) {
         <ng-container *ngIf="item.isActive">
@@ -35,7 +35,7 @@
     </div>
 
     <div class="col-6 col-md-2 order-2">
-      <div class="text-white text-caption px-3">Quick Links</div>
+      <div class="text-caption px-3">Quick Links</div>
       <mat-nav-list role="SocialMediaList">
         @for (item of SocialMediaItems; track item.displayName) {
         <ng-container *ngIf="item.isActive">
@@ -50,8 +50,8 @@
     </div>
 
     <div class="col-12 col-md-4 order-3 mt-4 mt-md-0">
-      <div class="text-white text-caption">Get Updates</div>
-      <div class="text-white text-body">
+      <div class="text-caption">Get Updates</div>
+      <div class="text-body">
         Welcome to Finxpert, Signup For Our
         Latest news & Article. We Won't give you
         spam mail and irrevelevnt messages.
