--- a/src/app/modules/landing/pages/business-platform/business-platform.component.css
+++ b/src/app/modules/landing/pages/business-platform/business-platform.component.css
@@ -1,15 +1,10 @@
-.hero {
+.sub-hero {
   background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.3)
     ),
     url("/assets/images/hero-business.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100svh;
-  position: relative;
 }
 
 .expandable-img {
