--- a/src/app/modules/landing/pages/contact/contact.component.css
+++ b/src/app/modules/landing/pages/contact/contact.component.css
@@ -1,22 +1,7 @@
-.hero {
-    background-image: url('/assets/images/hero.jfif');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 70dvh;
-    position: relative;
-}
-
-.hero-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.hero-content {
-    position: relative;
-    z-index: 2;
+.sub-hero {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.6),
+        rgba(0, 0, 0, 0.3)
+      ), url('/assets/images/hero.jfif');
 }
