--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,47 @@ body {
     padding: 0;
     margin: 0
 }
+
+.sub-hero {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60dvh;
+    position: relative;
+}
+
+.sub-hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.sub-hero-content {
+    position: relative;
+    z-index: 2;
+}
+
+.cta {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 40dvh;
+    position: relative;
+}
+
+.cta-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(3, 27, 57, 0.5);
+}
+
+.cta-content {
+    position: relative;
+    z-index: 2;
+}
